# inverse_zastavky

./: .gitignore  Cargo.toml  README.md  Rocket.toml
inv_zastavky_core/: Cargo.toml
inv_zastavky_core/src/: lib.rs
inv_zastavky_core/src/model/: base_city.rs  base_station.rs  bbox.rs  chain_station.rs  mod.rs  station.rs  stats.rs
inv_zastavky_core/src/suggest/: chain.rs
inv_zastavky_core/src/utils/: geo.rs
manager/: Cargo.toml
manager/src/: database.rs  export.rs  import.rs  main.rs  stats.rs
manager/src/netex/: parse.rs
server/: Cargo.toml
server/src/: api_base.rs  api_chain.rs  api_other.rs  api_stations.rs  api_suggest.rs  config.rs  czech-city-remap.txt  database.rs  main.rs  model.rs
web_ui/: index.html  package-lock.json  package.json
web_ui/src/: App.css  App.tsx  config.ts
web_ui/src/components/: AddStationDialog.css  AddStationDialog.tsx  EditableStationMarker.css  EditableStationMarker.tsx  StationMarker.css  StationMarker.tsx
web_ui/src/components/ModeSwitcher/: ModeSwitcher.css  ModeSwitcher.tsx
web_ui/src/components/browse/: StationMarker.tsx
web_ui/src/components/common/: CitySearch.css  CitySearch.tsx  ModeSwitcher.tsx  StationSearch.css  StationSearch.tsx
web_ui/src/components/editor/: AddStationDialog.tsx  EditableStationMarker.tsx
web_ui/src/components/locate/: LocateView.css  LocateView.tsx
web_ui/src/data/: app-context.ts  app-reducer.ts  app-state.ts  interact.ts  locate-reducer.ts  locate-state.ts
web_ui/src/model/: model.ts
web_ui/src/utils/: geo.ts
