[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[dependencies]
inv_zastavky_core = { path = "../inv_zastavky_core" }
clap = { version = "4.5.27", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
zip = "2.2.2"
quick-xml = "0.37.2"
md-5 = "0.10.6"
base64 = "0.22.1"
geojson = "0.24.1"
